--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.application.name=Plataforma-de-Voluntariado-Geolocalizado
-spring.datasource.url=jdbc:h2:mem:testdb  
-spring.datasource.driverClassName=org.h2.Driver  
-spring.datasource.username=sa  
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect  
+# Configuracao do DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Configuracao do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+# Configuracao da JPA
+spring.jpa.show-sql=true
